@@ -2,253 +2,220 @@
 
 ## Version Tags
 
-* `bleeding`, daily bleeding edge version of Horizon 24 using OpenJDK 8u191-jdk
-* `23.0.2-1`, `latest` is a reference to last stable release of Horizon using OpenJDK 8u191-jdk
+* `bleeding`, daily bleeding edge version of Horizon 24 using OpenJDK 11
+* `23.0.4-1`, last stable release of Horizon using OpenJDK 8
 
 ## General Project Information
 
 * CI/CD Status: [![CircleCI](https://circleci.com/gh/opennms-forge/docker-horizon-core-web.svg?style=svg)](https://circleci.com/gh/opennms-forge/docker-horizon-core-web)
-* Container Image Info: [![Container Image Info](https://images.microbadger.com/badges/version/opennms/horizon-core-web.svg)](https://microbadger.com/images/opennms/horizon-core-web "Get your own version badge on microbadger.com") [![Container Image Info](https://images.microbadger.com/badges/image/opennms/horizon-core-web.svg)](https://microbadger.com/images/opennms/horizon-core-web "Get your own image badge on microbadger.com") [![Container Image License](https://images.microbadger.com/badges/license/opennms/horizon-core-web.svg)](https://microbadger.com/images/opennms/horizon-core-web "Get your own license badge on microbadger.com") [![Anchore Image Overview](https://anchore.io/service/badges/image/84ef23ff2ddbda394e259fbab5c17d21656e837e949c39aba2579ffc3ad75756)](https://anchore.io/image/dockerhub/84ef23ff2ddbda394e259fbab5c17d21656e837e949c39aba2579ffc3ad75756?repo=opennms%2Fhorizon-core-web&tag=bleeding)
+* Container Image Info: [![Container Image Info](https://images.microbadger.com/badges/version/opennms/horizon-core-web.svg)](https://microbadger.com/images/opennms/horizon-core-web "Get your own version badge on microbadger.com") [![Container Image Info](https://images.microbadger.com/badges/image/opennms/horizon-core-web.svg)](https://microbadger.com/images/opennms/horizon-core-web "Get your own image badge on microbadger.com") [![Container Image License](https://images.microbadger.com/badges/license/opennms/horizon-core-web.svg)](https://microbadger.com/images/opennms/horizon-core-web "Get your own license badge on microbadger.com")
 * CI/CD System: [CircleCI]
 * Docker Container Image Repository: [DockerHub]
 * Issue- and Bug-Tracking: [GitHub issue]
-* Support from Community: [Discourse]
 * Source code: [GitHub]
-* Mattermost Chat: [Chat]
-* Maintainer: ronny@opennms.org
+* Help others and ask questions: [Discourse]
+* Talk with people in chat: [Web Chat]
 
 ## Horizon Docker files
 
-This repository provides snapshots for Horizon as docker images.
-The image provides the Horizon core monitoring services and the web application.
+This repository provides the Docker files to build OpenNMS Horizon OCI images with Docker.
 
-It is recommended to use `docker-compose` to build a service stack using the official _PostgreSQL_ image.
-In case you have already a _PostgreSQL_ database running, you can provide the database configuration in the `.opennms.env` and `.postgres.env` environment files, otherwise users and database will be created.
+To build the container images files the following is required:
 
-Data is by default persisted on your Docker host using a local volume driver for the following data:
+* Docker in a current version
+* git to checkout the repository
 
-```yml
-# PostgreSQL database
-psql.data:
-  driver: local
+### Quickstart to build an OCI image with Docker
 
-# OpenNMS Horizon RRD files, logs and generated PDF reports
-opennms.data:
-  driver: local
+**Step 1:** Checkout the repository
 
-# OpenNMS Horizon configuration files
-opennms.etc:
-  driver: local
-```
-
-It is required to manually edit _OpenNMS Horizon_ configuration files, you can add your own configuration files by providing a `etc-overlay` directory.
-On startup the files overwrite the default configuration.
-
-```yml
-- ./etc-overlay:/opt/opennms-etc-overlay
-```
-
-If you prefer to have you _OpenNMS Horizon_ configuration on your Docker host in a specific directory, you can mount a directory with your config like this:
-
-```yml
-volumes:
-    - ./myHorizonConfig:/opt/opennms/etc
-```
-
-In case the directory is empty, it will be initialized with a default pristine configuration from `/opt/opennms/share/etc-pristine`.
-
-IMPORTANT: Take care about configurations which can be changed through the Web UI which are persisted on the file system, e.g. `users.xml`, `groups.xml`, `surveillance-categories.xml`, `snmp-config.xml`, etc.
-
-## Requirements
-
-* docker in a current stable version
-* docker-compose in a current stable version
-* git
-
-## Usage
-
-```sh
+```shell
 git clone https://github.com/opennms-forge/docker-horizon-core-web.git
-cd docker-horizon-core-web
-docker-compose up -d
+cd docker-horizon-core-web/
 ```
 
-The web application is exposed on TCP port 8980.
-You can login with default user *admin* with password *admin*.
-Please change immediately the default password to a secure password.
+**Step 2:** Build the container image
 
-To get a help for all available container options just run:
-
-```sh
-docker run --rm opennms/horizon-core-web
+```shell
+./build_container_image.sh
 ```
 
-## Set Java Options
+As a result you will get a tag `horizon-core-web:latest` and an OCI file in `images/horizon-core-web.oci`
 
-It is easily possible to add Java options to control the behavior of the JVM for performance tuning or debugging.
-The environment variable `JAVA_OPTS` is passed on the Java command and can be used to extend or overwrite JVM options.
+### Customize build from Bamboo RPMs
 
-IMPORTANT: To give more control the Java binary command natively in the docker-entrypoint.sh and Java options in `opennms.conf` are *not* evaluated.
-           The java process has PID 1 and
+**Step 1:** Check out the repository to build a Docker image
 
-Used in an environment file:
-
-```yml
-env_file:
-  - .java.env
-
-cat .java.env
-JAVA_OPTS=-XX:+UseParallelGC -XX:+PrintGCDetails -XX:+PrintFlagsFinal
+```shell
+git clone https://github.com/opennms-forge/docker-horizon-core-web.git
+cd docker-horizon-core-web/
+git checkout -b refactor/images origin/refactor/image
 ```
 
-Used in docker-compose service environment definition:
+**Step 2:** Fetch the RPMS from Bamboo from a build URL
 
-```yml
-opennms:
-  container_name: opennms.core.web
-  image: opennms/horizon-core-web:latest
-  environment:
-    - JAVA_OPTS=-XX:+UseParallelGC -XX:+PrintGCDetails -XX:+PrintFlagsFinal
+```shell
+./fetch-rpms.sh https://bamboo.opennms.org/browse/OPENNMS-ONMS2852-7
 ```
 
-## Java and Container Heap Memory
+**Step 3:** Build the container image from the local RPMS
 
-To control and isolate resource usage of processes the Kernel feature _cgroups (Control Groups)_ is used.
-With the combination of Java there are some additional things to take care of regarding the _Maximum Heap Size_ and limiting memory usage of the container.
-
-By default [JVM ergonomics](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gc-ergonomics.html) calculates the _Maximum Heaps Size_ based on the Docker host memory and not by the memory set with with _cgroups_.
-
-To ensure the JVM calculates the _Maximum Heap Size_ correct you have two options:
-
-1) Set the correct _Maximum Heap Size_ manually with `-Xmx` see section above _Set Java Options_
-2) If no -Xmx option is set, you can automatically calculate the _Maximum Heap Size_ with enabling the experimental cgroup aware feature with
-
-```sh
-JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
+```shell
+./build_container_image.sh
 ```
 
-As of Java SE 8u131 the JVM is Docker-aware with Docker CPU limits transparently.
-As long if `-XX:ParallelGCThreads` or `-XX:CICompilerCount` are not specified, the JVM will apply the Docker CPU limit as the number CPUs and calculates the number of GC and JIT compiler threads just like running on bare metal.
+The image is created with the tag `horizon-core-web:latest` and also persisted in the file system in `images/horizon-core-web.oci`
 
-## Update and Maintenance
+### Run OpenNMS Horizon with Docker Compose
 
-The entry point script is used to control starting behavior:
+A OpenNMS Horizon minimally requires a running PostgreSQL service.
+Applications like Grafana, Elasticsearch or Kafka are optional and depend on your setup and use cases, e.g. processing network flows or having a scalable time series storage with Newts based on Cassandra.
 
-```sh
--f: Apply overlay configuration if exist and just start OpenNMS Horizon
--h: Show help
--i: If necessary initialize database, create pristine configuration, do an upgrade and apply the overlay config but do *not* start OpenNMS Horizon
--s: Same as -i but start OpenNMS Horizon, this should be your default
--n: Initialize Newts on Cassandra and the PostgreSQL database, do *not* start OpenNMS Horizon
--c: Same as -n but start OpenNMS Horizon, this should be your default when you want to use Newts on Cassandra
--t: Just test you configuration
+It is recommended to run a application stack with `docker-compose`.
+
+#### Spin-up the minimal example stack
+
+You will find ready-to-run stack in our example directory.
+When you start the images for the first time the following tasks need to be accomplished:
+
+* Initialize the PostgreSQL
+* Initialize Horizon configuration files and setup the database schema
+
+Here are the steps to initialize your environment to get you up and running.
+Environment variables and volumes to persist data are pre-configured with example values.
+
+**Step 1:** Change into the minimal directory
+
+```
+cd examples/minimal
 ```
 
-If you want to enforce an update, create a `/opt/opennms/etc/do-upgrade` file.
-Starting with `-i` or `-s` will run the `install -dis` command once to update the configuration and database schema.
+**Step 2:** Initialize and start the PostgreSQL service in background
 
-All options which do upgrades or start OpenNMS Horizon verify if the configuration is valid and pass the configuration test.
-
-## Using etc-overlay for custom configuration
-
-If you just want to maintain custom configuration files outside of OpenNMS, you can use an etc-overlay directory.
-All files in this directory are just copied into /opt/opennms/etc in the running container.
-You can just mount a local directory like this:
-
-```yml
-volumes:
-  - ./etc-overlay:/opt/opennms-etc-overlay
+```
+docker-compose up -d database
 ```
 
-## Using jetty-overlay to customize Jetty WEBINF
+**Step 3:** Initialize OpenNMS Horizon configuration files and database schema
 
-If you just want to maintain custom configuration files for the Jetty application container, you can use an jetty-overlay directory.
-All files in this directory are just copied into /opt/opennms/jetty-webapps/opennms/WEB-INF in the running container.
-You can just mount a local directory like this:
-
-```yml
-volumes:
-  - ./jetty-overlay:/opt/opennms-jetty-webinf-overlay
+```
+docker-compose run --rm horizon -i
 ```
 
-## Using overlay for custom arbitrary configuration
+**Step 4:** Start OpenNMS Horizon as a background service
 
-To overlay arbitrary configuration files/directory structures, you can use an opennms-overlay directory.
-The contents of this directory are copied into /opt/opennms/ in the running container.
-You can just mount a local directory like this:
-
-```yml
-volumes:
-  - ./opennms-overlay:/opt/opennms-overlay
+```
+docker-compose up -d horizon
 ```
 
-## Test configuration files
+You can startup the whole stack now with `docker-compose up -d` and tear it down with `docker-compose down`.
 
-This image allows to test configuration files if they are valid XML and if they can be loaded on startup.
-It is automatically executed on startup but can also it can just be executed as a single shot command.
+If you want to **delete all your data** to start fresh use `docker-compose down -v` which deletes also the used volumes.
+The content in the bind-mount directory will not be deleted.
 
-Get the usage output of the config tester with:
+#### Minimal required environment variables
+
+For a minimal stack with PostgreSQL you need the following environment variables to setup the connection to PostgreSQL and initializing the database:
 
 ```bash
-docker run --rm opennms/horizon-core-web:latest -t
+# Environment variables for OpenNMS database connection
+TZ=Europe/Berlin
+OPENNMS_DATABASE_NAME=opennms
+OPENNMS_DATABASE_USER=opennms
+OPENNMS_DATABASE_PASSWORD=opennms
+POSTGRES_HOST=database
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 ```
 
-Some examples how to use the config tester with this image:
+Ensure the time zone `TZ` is set to the correct time zone you're in.
+The examples use `.opennms.env` and `.postgres.env` files which contain these settings.
+You can also set them in the docker-compose file if you want.
 
-Test all configuration files:
+### Persisting your data
+
+The container images are ephemeral and by default do not persist data.
+The following directories are required to be persisted in a volume or as a bind-mount depending on your environment.
+The minimal example uses volumes for data which is not required to be edited on the file system and bind-mounts for configurations.
+
+* PostgreSQL database: `- data-pgsql:/var/lib/postgresql/data`
+* OpenNMS Horizon JasperReports: `- data-opennms-reports:/opt/opennms/share/reports`
+* OpenNMS Horizon RRD files: `- data-opennms-rrd:/opt/opennms/share/rrd`
+* OpenNMS Horizon MIB files: `- data-opennms-mibs:/opt/opennms/share/mibs`
+* OpenNMS configuration files: `- ./opennms-etc:/opt/opennms/etc`
+      
+
+For the reason some configuration files from OpenNMS Horizon need to be edited and migrated to newer versions from the file system it is recommended you persist the `opennms/etc` directory on your local files system so you can easily access it or set it under version control.
+
+### Configuration through Environment Variables
+
+OpenNMS Horizon has no built-in mechanism to get configured through Environment variables.
+To enable this functionality the container image uses confd [confd] which uses by default `env` as configuration backend.
+
+You can lookup all built-in configuration parameters in `confd/conf.d`. For the environment `env` you have to convert the key to uppercase letters and replace the `/` with an `_` like this:
+
+```bash
+# Key in confd
+"/newts/config/keyspace"
+
+# Environment variable get resolved to value "newts" in the template
+export NEWTS_CONFIG_KEYSPACE=newts
+```
+
+You can extend the existing configuration as you need it by bind-mounting additional template and resource files in `/etc/confd`.
+
+Similarly, you can use a different _confd_ backend by bind-mounting your settings to `/etc/confd/confd.toml`.
+
+### Injecting files with bind-mounts
+
+OpenNMS Horizon can be extended with plugins and additional configuration files.
+The image provides a bind-mount convention which allows you to inject files and directories into the `/opt/opennms` directory as the following:
+
+```yaml
+volumes:
+  - ./overlay:/opt/opennms-overlay
+```
+
+When starting Horizon everything will be copied into `/opt/opennms`.
+
+### Testing configuration files
+
+If you want to just test all configuration files you can run
 
 ```
-docker run --rm opennms/horizon-core-web:latest -t -a
+docker-compose run --rm horizon -t -a
 ```
 
-Test just a specific configuration file with verbose output `-v`:
+if you want to test a specific configuration file
 
 ```
-docker run --rm opennms/horizon-core-web:latest -t -v snmp-config.xml
+docker-compose run --rm horizon -t eventd-configuration.xml
 ```
 
-Test configuration files with a etc-overlay directory:
+You can get a list of all testable configuraiton files with
 
 ```
-docker run --rm -v $(pwd)/etc-overlay:/opt/opennms-etc-overlay opennms/horizon-core-web:latest -t -v snmp-config.xml
+docker-compose run --rm horizon -t -l
 ```
 
-## Environment Variables
+### Setting Java variables
 
-* `POSTGRES_HOST`: PostgreSQL database host, default: `database`
-* `POSTGRES_PORT`: Port to access PostgreSQL database, default: `5432`
-* `POSTGRES_USER`: PostgreSQL admin user, default: `postgres`
-* `POSTGRES_PASSWORD`: PostgreSQL admin password, default: `postgres`
-* `OPENNMS_DBNAME`: Database name for OpenNMS Horizon, default: `opennms`
-* `OPENNMS_DBUSER`: User to access the OpenNMS Horizon database, default: `opennms`
-* `OPENNMS_DBPASS`: Password for OpenNMS Horizon database user, default: `opennms`
-* `OPENNMS_KARAF_SSH_HOST`: Listening address for Karaf SSH port, default: `0.0.0.0`
-* `OPENNMS_KARAF_SSH_PORT`: SSH port for Karaf, default: `8101`
+There are two conventions to adjust the Horizon Java options.
 
-Using a Cassandra Cluster:
+* Memory specific options can be set with `JAVA_MEM_OPTS` which default to `-Xmx1024m -XX:MaxMetaspaceSize=512m`
+* Any other Java options can be set with `JAVA_OPTS`
 
-* `${OPENNMS_CASSANDRA_HOSTNAMES}`: Host name or IP address of the cassandra cluster, a comma separated list is also accepts
-* `${OPENNMS_CASSANDRA_KEYSPACE}`: Name space to persist performance data in, default: `newts`
-* `${OPENNMS_CASSANDRA_PORT}`: Cassandra port, default: `9042`
-* `${OPENNMS_CASSANDRA_USERNAME}`: User name accessing Cassandra
-* `${OPENNMS_CASSANDRA_PASSWORD}`: Password accessing Cassandra
-
-## Running on Cassandra with Newts
-
-By default the _OpenNMS Horizon_ image will run using _RRDTool_ for performance data storage.
-However _OpenNMS Horizon_ can also be configured to run on _Cassandra_ using the _Newts_ time series schema.
-
-The configuration options can be found in the _Environment Variables_ section.
-The `opennms-cassandra-helm.yml` is provided which illustrates how to run _OpenNMS Horizon_ with a small single _Cassandra_ node on the same machine.
-
-## Build Argument
-
-* `MIRROR_HOST`: Server with RPM packages, default: `yum.opennms.org`
-* `OPENNMS_VERSION`: Version of OpenNMS Horizon RPM files, default: `stable`
+```yaml
+environment:
+  - JAVA_OPTS=-XX:+UseParallelGC -XX:+PrintGCDetails -XX:+PrintFlagsFinal
+  - JAVA_MEM_OPTS=-Xmx2g -XX:MaxMetaspaceSize=1g`
+```
 
 [GitHub]: https://github.com/opennms-forge/docker-horizon-core-web.git
 [DockerHub]: https://hub.docker.com/r/opennms/horizon-core-web
 [GitHub issue]: https://github.com/opennms-forge/docker-horizon-core-web
 [CircleCI]: https://circleci.com/gh/opennms-forge/docker-horizon-core-web
-[Chat]: https://chats.opennms.org/opennms-discuss
-[Discourse]: https://opennms.discourse.group/categories
+[Discourse]: https://opennms.discourse.group
+[Web Chat]: https://chats.opennms.org/opennms-discuss
+[confd]: http://www.confd.io
